<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:civ_border_color="@color/colorGreen"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toStartOf="@id/detail_txt_publicRepos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/detail_txt_publicRepos"
                    app:layout_constraintStart_toStartOf="@id/detail_txt_publicRepos"
                    app:layout_constraintTop_toTopOf="@id/image_avatar"
                    tools:text="0" />

                <TextView
                    android:id="@+id/detail_txt_publicRepos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/repositories"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/detail_txt_followers"
                    app:layout_constraintStart_toEndOf="@id/image_avatar"
                    app:layout_constraintTop_toBottomOf="@id/tv_repo" />

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/detail_txt_followers"
                    app:layout_constraintStart_toStartOf="@id/detail_txt_followers"
                    app:layout_constraintTop_toTopOf="@id/tv_repo"
                    tools:text="0" />

                <TextView
                    android:id="@+id/detail_txt_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/followers"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/detail_txt_following"
                    app:layout_constraintStart_toEndOf="@id/detail_txt_publicRepos"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_followers" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/detail_txt_following"
                    app:layout_constraintStart_toStartOf="@id/detail_txt_following"
                    app:layout_constraintTop_toTopOf="@id/tv_detail_followers"
                    tools:text="0" />

                <TextView
                    android:id="@+id/detail_txt_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detail_txt_followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_following" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:drawablePadding="6dp"
                    android:text=""
                    app:drawableStartCompat="@drawable/ic_user_black" />
                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="8dp"
                    android:drawablePadding="4dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_location_black" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="start|top"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="100dp"
            android:layout_marginStart="80dp"
            android:onClick="onClick"
            android:src="@drawable/ic_baseline_unfavorite_24"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="mini" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:layout_marginTop="250dp"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/tabs_follow"
            android:layout_marginTop="9dp"
            android:background="@drawable/background" />

    </RelativeLayout>

</ScrollView>